# Copyright (C) 2009 by Wang Rui <wangray84 at gmail dot com>
# OpenSceneGraph Engine Book - Design and Implementation
# How to create a simple file I/O plugin

SET( EXAMPLE_NAME osgdb_simple )

SET( EXAMPLE_FILES
    simpleplugin.cpp
)

SET( DATA_FILES
)

ADD_LIBRARY( ${EXAMPLE_NAME} SHARED ${EXAMPLE_FILES} )
SET_TARGET_PROPERTIES( ${EXAMPLE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}" )

INCLUDE_FOR_PROJECT( ${EXAMPLE_NAME} OPENTHREADS OSG OSGDB OSGUTIL OSGVIEWER )
LINK_PROJECT( ${EXAMPLE_NAME} OPENTHREADS OSG OSGDB OSGUTIL OSGVIEWER )
INSTALL_PROJECT( ${EXAMPLE_NAME} )

INSTALL( FILES ${DATA_FILES} DESTINATION bin )
